Added surds tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.4.0",
   "description": "A JavaScript library for parsing mathematical expressions and outputting them in a variety of formats",
   "main": "responseparsing.js",
-  "dependencies": {},
+  "dependencies": {
+    "uniq": "^1.0.1"
+  },
   "devDependencies": {
     "mocha": "^6.2.2"
   },
